--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name='app_name'>
-        Ruboto Test
+        SQLDroid Test
     </string>
 </resources>
